Analisar alerta de segurança guava #46
- Removendo dependências do Guava (alertas de segurança);
- Migrando guava para java 8